--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,7 +6,7 @@ ports:
 
 tasks:
   - init: pip3 install -r requirements.txt
-    command: python3 server.py
+    command: python3 server.py && gp open templates/main.html
 
 vscode:
   extensions:
